Use official PNG logo and fix layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Left Section: Hero -->
         <div class="hero-section">
             <div class="hero-content-group">
-                <img src="assets/523bd446e3df4b4f3b2402da3ad2240ca4e087b9.svg" alt="transmita logo" class="hero-logo">
+                <img src="assets/LOGOTIPO-ORIGINAL.png" alt="transmita logo" class="hero-logo">
                 <h1 class="hero-title">
                     Vamos amar<br>
                     trabalhar juntos<br>
