Update favicon and implement form submission via mailto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>transmita - Fale Conosco</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="assets/930676ca083d8e5b142a56f91e9ff4a3e1b5efcc.svg">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -49,8 +49,8 @@
                         <div class="col-12">
                             <div class="input-group-custom">
                                 <i data-lucide="user" class="input-icon"></i>
-                                <input type="text" class="form-control custom-input" placeholder="Seu nome completo"
-                                    required>
+                                <input type="text" id="name" class="form-control custom-input"
+                                    placeholder="Seu nome completo" required>
                             </div>
                         </div>
                     </div>
@@ -59,14 +59,15 @@
                         <div class="col-md-7">
                             <div class="input-group-custom">
                                 <i data-lucide="phone" class="input-icon"></i>
-                                <input type="text" class="form-control custom-input" placeholder="Telefone ou WhatsApp"
-                                    required>
+                                <input type="text" id="phone" class="form-control custom-input"
+                                    placeholder="Telefone ou WhatsApp" required>
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="input-group-custom">
                                 <i data-lucide="briefcase" class="input-icon"></i>
-                                <input type="text" class="form-control custom-input" placeholder="Sua empresa" required>
+                                <input type="text" id="company" class="form-control custom-input"
+                                    placeholder="Sua empresa" required>
                             </div>
                         </div>
                     </div>
@@ -75,8 +76,8 @@
                         <div class="col-12">
                             <div class="input-group-custom textarea-custom">
                                 <i data-lucide="message-square" class="input-icon"></i>
-                                <textarea class="form-control custom-input" placeholder="Conte-nos sobre sua ideia..."
-                                    required></textarea>
+                                <textarea id="message" class="form-control custom-input"
+                                    placeholder="Conte-nos sobre sua ideia..." required></textarea>
                             </div>
                         </div>
                     </div>
@@ -97,6 +98,21 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         lucide.createIcons();
+
+        document.getElementById('contactForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const company = document.getElementById('company').value;
+            const message = document.getElementById('message').value;
+
+            const emailTo = "vinicius@transmitadigital.com.br";
+            const subject = "Novo contato via site - " + company;
+            const body = `Nome: ${name}\nTelefone: ${phone}\nEmpresa: ${company}\nMensagem: ${message}`;
+
+            window.location.href = `mailto:${emailTo}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+        });
     </script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
